@@ -24,6 +24,7 @@ v.0.5dev (ongoing development)
  * Pyramid: Convert set_char to 8 byte bitmap, add support for bignum
  * Convert set_char of drivers bayrad, lb216, lcterm, mtc_s16209x, wirz-sli
  * CFontzPacket: Fix not using select() even if its available
+ * CFontzPacket: Use cellwidth = 5 on CFA-631 and CFA-635 too
 
 v0.5.4
  * Update driver includes and LDFLAGS (fixed glk and bayrad binding error)
